Ajustes no Estilo

--- a/experiencia.html
+++ b/experiencia.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..800&display=swap" rel="stylesheet">
     <title>Experiência</title>
 </head>
 <body>
     <div class="experiencias">
-        <h1>Experiências</h1>
+        <h1 class="exp_titulo">Experiências</h1>
         <div class="experiencia1">
             <h3 class="tituloexp">MA Tecnologias</h3>
             <span class="cargo">Analista de Suporte de Sistemas - 09/2021 - Atual</span>
