--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=KoHo&display=swap" rel="stylesheet">
     <title>Contato</title>
 </head>
 <body>
-    
+    <header class="menu">
+        <nav class="menu__botoes">
+            <a class="botoes" href="/index.html">Sobre mim</a>
+            <a class="botoes" href="formacao.html">Formação</a>
+            <a class="botoes" href="/experiencia.html">Experiência</a>
+            <a class="botoes" href="/contato.html">Contato</a>
+        </nav>
+    </header>
+    <main class="apresentacao">
+        <img src="/img/foto_index.png" width="346px">
+        <section class="apresentacao_conteudo">
+
+        </section>
+    </main>
+    <footer>
+        <p class="rodape">© 2024 Mayara Maciel Saraiva. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
