--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <header class="menu">
-        <a class="botoes" href="/index.html">Sobre mim</a>
-        <a class="botoes" href="formacao.html">Formação</a>
-        <a class="botoes" href="/experiencia.html">Experiência</a>
-        <a class="botoes" href="/contato.html">Contato</a>
+        <nav class="menu__botoes">
+            <a class="botoes" href="/index.html">Sobre mim</a>
+            <a class="botoes" href="formacao.html">Formação</a>
+            <a class="botoes" href="/experiencia.html">Experiência</a>
+            <a class="botoes" href="/contato.html">Contato</a>
+        </nav>
     </header>
     <main class="apresentacao">
         <img src="/img/foto_index.png" width="346px">
@@ -27,6 +29,17 @@
                 <p>
                 Determinada e proativa, busco aprender cada vez mais através de formações especializadas e leitura técnica para assim, crescer como desenvolvedora.
                 </p>
+            </div>
+            <div class="links_apresentacao">
+                <!-- <h2 class="apresentacao_subtitulo">Acesse Minhas Redes</h2> -->
+                <a class="links_apresentacao__link" href="https://www.linkedin.com/in/mayara-saraivaa">
+                    <img src="./img/linkedin-logo-azul.png">
+                    LinkedIn
+                </a>
+                <a class="links_apresentacao__link" href="https://github.com/mayasaraiva">
+                    <img src="./img/github-logo-azul.png">
+                    GitHub
+                </a>
             </div>
         </section>
     </main>
