--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Determinada e proativa, busco aprender cada vez mais através de formações especializadas e leitura técnica para assim, crescer como desenvolvedora.
                 </p>
             </div>
-            <div class="links_apresentacao">
+            <div class="links_apresentacao" id="botoes-link">
                 <!-- <h2 class="apresentacao_subtitulo">Acesse Minhas Redes</h2> -->
                 <a class="links_apresentacao__link" href="https://www.linkedin.com/in/mayara-saraivaa">
                     <img src="./img/linkedin-logo-azul.png">
