--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Portfólio</title>
 </head>
 <body>
-    <header class="menu">
+    <header class="menu" id="menu">
         <nav class="menu__botoes" id="nav">
             <a class="botoes" onclick="index()" href="/index.html">Sobre mim</a>
             <a class="botoes" onclick="loadFormacao()">Formação</a>
