Organização de arquivos e inclusão de form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main class="apresentacao" id="main-content">
-        <img src="/img/foto_index.png" width="346px">
+        <img id="foto_index" src="./assets/img/foto_index.png" width="346px">
         <section class="apresentacao_conteudo" id="apresentacao">
             <div class="resumo">
                 <h1>Mayara Saraiva</h1>
@@ -33,12 +33,15 @@
             <div class="links_apresentacao" id="botoes-link">
                 <!-- <h2 class="apresentacao_subtitulo">Acesse Minhas Redes</h2> -->
                 <a class="links_apresentacao__link" href="https://www.linkedin.com/in/mayara-saraivaa">
-                    <img src="./img/linkedin-logo-azul.png">
+                    <img src="./assets/img/linkedin-logo-azul.png">
                     LinkedIn
                 </a>
                 <a class="links_apresentacao__link" href="https://github.com/mayasaraiva">
-                    <img src="./img/github-logo-azul.png">
+                    <img src="./assets/img/github-logo-azul.png">
                     GitHub
+                </a>
+                <a target="_blank" href="./assets/CV - Mayara Saraiva.pdf" class="links_apresentacao__link">Dowload CV <img
+                    src="./assets/img/dowload.svg" alt="dowload-cv-botão">
                 </a>
             </div>
         </section>
@@ -46,6 +49,7 @@
     <footer>
         <p class="rodape">© 2024 Mayara Maciel Saraiva. All Rights Reserved.</p>
     </footer>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/sendEmail.js"></script>
 </body>
 </html>
