--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://mayasaraiva.github.io/Portfolio/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=KoHo&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Portfólio</title>
+    <title>Mayara Saraiva</title>
 </head>
 <body>
     <header class="menu" id="menu">
