--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <footer>
         <p class="rodape">© 2024 Mayara Maciel Saraiva. All Rights Reserved.</p>
     </footer>
-    <script src="https://mayasaraiva.github.io/Portfolio/js/app.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://mayasaraiva.github.io/Portfolio/js/sendEmail.js"></script>
 </body>
 </html>
