--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
         <p class="rodape">© 2024 Mayara Maciel Saraiva. All Rights Reserved.</p>
     </footer>
     <script src="js/app.js"></script>
-    <script src="https://mayasaraiva.github.io/Portfolio/js/sendEmail.js"></script>
+    <script src="js/sendEmail.js"></script>
 </body>
 </html>
