--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="menu" id="menu">
         <nav class="menu__botoes" id="nav">
-            <a class="botoes" onclick="index()" href="/index.html">Sobre mim</a>
+            <a class="botoes" href="index.html">Sobre mim</a>
             <a class="botoes" onclick="loadFormacao()">Formação</a>
             <a class="botoes" onclick="loadExperiencia()">Experiência</a>
             <a class="botoes" onclick="loadContato()">Contato</a>
