--- a/assets/pages/formacao.html
+++ b/assets/pages/formacao.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=KoHo&display=swap" rel="stylesheet">
 
 <section class="formacao_e_certificados__conteudo" id="formacao">
